Stopped welcome text overflow

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -184,18 +184,6 @@ p,
   h2 {
     text-align: center;
   }
-
-  .wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: auto;
-  }
-  
-  /* .welcomeText {
-    width: 100%;
-  } */
 }
 @media only screen and (max-width: 600px) {
   body {
@@ -222,10 +210,6 @@ p,
 }
 @media only screen and (max-width: 500px) {
 
-  /* .welcomeText {
-    font-size: 14px;
-  }
-   */
   .single,
   .profile {
     display: flex;
